# image-processor

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  default.code-workspace  docker-compose.yaml  example.config.yaml  package.json
.circleci/: config.yaml  config.yml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  deploy.yaml  lint.yaml
.husky/: pre-commit
apps/: CMakeLists.txt
apps/convert_png/: CMakeLists.txt  convert_png.hpp
assets/: .gitignore  animated-1.avif  animated.avi  animated.flv  animated.mov  animated.webm  static-1.avif  static-1.tiff  static-2.avif
cmake/: Findgifski.cmake
cpp/: CMakeLists.txt  Makefile  README.md  requirements.txt
cpp/apps/: CMakeLists.txt
cpp/apps/avif_dump/: CMakeLists.txt
cpp/apps/convert_png/: CMakeLists.txt  convert_png.cpp  convert_png.hpp
cpp/apps/dump_png/: CMakeLists.txt  dump_png.cpp
cpp/apps/resize_png/: CMakeLists.txt  resize_png.cpp  resize_png.hpp
cpp/apps/webp_dump/: CMakeLists.txt  webp_dump.cpp
cpp/cmake/: FindGifski.cmake
docker/: full.Dockerfile  partial.Dockerfile
go/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
go/cmd/: main.go
go/container/: container_test.go  mimes.go
go/internal/configure/: config.go
go/internal/container/: container.go  container_test.go
go/internal/global/: context.go  instances.go
go/internal/health/: health.go  health_test.go
go/internal/image_processor/: image_processor.go  image_processor_test.go  result.go  task.go  worker.go  worker_test.go
go/internal/instance/: kubemq.go  monitoring.go  prometheus.go
go/internal/monitoring/: monitoring.go  prom.go
go/internal/svc/kubemq/: common.go  kubemq.go  kubemq_mock.go
go/internal/svc/prometheus/: prometheus.go
go/internal/svc/rmq/: rmq.go  rmq_mock.go
go/internal/svc/s3/: common.go  s3.go  s3_mock.go
go/internal/testutil/: testutil.go
go/task/: result.go  task.go
k8s/: .gitignore  dev.template.yaml  prod.template.yaml  staging.template.yaml
terraform/: .terraform.lock.hcl  config.template.yaml  deployment.tf  main.tf  providers.tf  variables.tf
